# turb-os-2

./: Cargo.toml  README.md  x86_64-turb-os-2.json  x86_64-turb_os_2.json
.cargo/: config.toml
.cargo/.github/workflows/: ci.yaml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/drivers/: mod.rs
src/drivers/serial/: macros.rs  mod.rs  serial_driver.rs
src/drivers/vga/: macros.rs  mod.rs  structs.rs  vga_driver.rs
src/system/cpu/: gdt.rs  idt.rs  mod.rs  pic.rs  timer.rs
src/utils/: mod.rs
src/utils/panic/: mod.rs  panic.rs  panic_utils.rs
src/utils/qemu/: mod.rs  qemu_utils.rs
tests/: basic_boot.rs  mod.rs  should_panic.rs  stack_overflow.rs
