[package]
name = "turb-os-2"
version = "0.1.0"
edition = "2021"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this specific version to not have errors
bootloader = "0.9.23"
spin = "0.9.6"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]